u2004-05-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkselection.c (_gtk_selection_request): Fix
	a debug message to show correct information.
	(_gtk_selection_incr_event): Make INCRemental transfer
	of MULTIPLE targets work. This was broken since 1997!

2004-05-02  Hans Breuer  <hans@breuer.org>

	* gdk/win32/gdkdrawable-win32.c (draw_segments) : don't
	modify the passed in GdkSegment(s) in place, we may get
	them again to draw at the same place. Fixes bug #129095, 
	bug #137177, ...
	(draw_segments) draw the end pixel again to get the 
	pixmap mask right, fixes bug #126710, #130202

	* gdk/win32/gdkwindow-win32.c : use SetForegroundWindow,
	fixes bug #106013, John Ehresman

	* gtk/makefile.msc.in : don't try to link gtk.res but
	use gtk-win32.res (as supposed to be fixed below :)

2004-05-01  Hans Breuer  <hans@breuer.org>

	* tests/Makefile.am : tests/makefile.msc is in CVS for
	a long time, finally added to EXTRA_DIST : fixes bug 
	#141334, John Ehresman

2004-04-30  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.4.1 ===

	* configure.in: Version 2.4.1, interface age 1. 

	* NEWS: Updates

2004-04-29  Federico Mena Quintero  <federico@ximian.com>

	Fixes #140412.

	* gtk/gtkfilechooserdefault.c (remove_selected_bookmarks): New
	function; moved the code over from
	remove_bookmark_button_clicked_cb().
	(remove_selected_bookmarks): Now, getting a non-removable bookmark
	is not an error, as we may be called as a result of hitting the
	Delete key.
	(shortcuts_key_press_event_cb): New handler; delete the bookmark
	if the user presses Backspace, Delete, or KP_Delete.

2004-04-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkaction.c (closure_accel_activate): Use
	_gtk_action_emit_activate() instead of directly
	emitting the activate signal.  (#141429, Jody Goldberg)

	* gtk/gtkactiongroup.c (gtk_action_group_add_action_with_accel): 
	Warn people when the accelerator can not be 
	parsed.  (#141429, Jody Goldberg)
